# robotframework-construct

./: README.md  mutation_basic.toml  pyproject.toml  release_checklist.txt
.github/workflows/: main.yml  mutations.yml  pythonBreakout.yaml  pythonBreakout.yml  run_radon.yml  run_ruff.yml
atests/HIDKeyboard/: hid_keyboard.robot
atests/bson/: bson.robot  bson_negatives.robot  bson_rfconstruct_as_variablefile.robot  errormessage_checks.robot
atests/dns/: dns.robot  dns_reflector.robot
atests/hardware_needed_examples_results/HID/: .xml
atests/hw_dependant_results/HID/: log.html  output.xml  report.html
atests/hw_dependant_results/nfc/: log.html  output.xml  report.html
atests/nfc/: nfc.py  nfc_basic.robot  nfc_interface.py
atests/nfc_nci/: nci.py  nci_interface.py  nfc_basic.robot
atests/regmapmockup/: errormessage_checks.robot  regmapmockup.robot  regmapmockup_test_errormessages.robot
breakout/toCpp/: cpp.xsh
docs/: release_notes.md  robotframework-construct.html  robotframework-construct.reflector.html  robotframework-construct.regmap.html  robotframework_construct_0.2.1.html  robotframework_construct_0.2.2.html  robotframework_construct_0.2.4.html  robotframework_construct_0.3.0.html  robotframework_construct_0.3.1.html
examples/bson/: bson_construct.py  simple_bson.robot
examples/regmapmockup/: math_coprocessor_regmap.py  regmapmockup.robot
mutation_testing/: mutation_base.toml
src/robotframework_construct/: __init__.py  reflector.py  regmap.py
tasks/: baseQC.xsh  mutationtests.xsh  release.xsh
tests/: __init__.py
