[project]
name = "robotframework-construct"
version = "0.1.0"
description = "Infrastructure to use construct Structs in robotframework"

readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "construct>=2.10.70",
    "robotframework>=7.1",
]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
test = [
    "cosmic-ray>=8.3.15",
    "pymongo>=4.9.1",
    "ruff"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython",
    "radon>=6.0.1",
    "ruff",
]

