[project]
name = "robotframework-construct"
version = "0.1.0"
description = "Infrastructure to use construct Structs in robotframework"
authors = [
    {name = "Franz Haas", email = "franz.dominik.haas@gmail.com"},
]

readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "robotframework>=7.1",
    "construct"
]
license = { text = "Apache-2.0" }
keywords = ["robotframework"]

[project.optional-dependencies]
test = [
    "cosmic-ray>=8.3.15",
    "pymongo>=4.9.1",
    "ruff>=0.7.2",
    "pytest>=8.3.3"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "radon>=6.0.1",
    "ruff>=0.7.2",
]

[tool.uv.sources]
construct = { git = "https://github.com/franzhaas/construct.git", rev = "issue_1082" }
